Fixed footer alignment issues

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,7 @@
 	overflow-x: hidden;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 }
 
 .content {
